lightbox: Fix Z-Index for Proper Ordering.
This fixes the z-index of the lightbox overlay, which previously
appeared behind the header, and the muting notification to be above
everything else on the page.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -84,7 +84,7 @@ p.n-margin {
     background-color: #FAFAFA;
     border-radius: 5px;
     box-shadow: 0px 0px 30px rgba(0,0,0,0.25);
-    z-index: 101;
+    z-index: 110;
 
     animation-name: pulse;
     animation-iteration-count: infinite;
